--- a/caro/public/style.css
+++ b/caro/public/style.css
@@ -165,3 +165,14 @@ header h1 {
     background: #ffeb3b !important;
     animation: winning 0.5s ease infinite alternate;
 }
+
+@keyframes placePiece {
+    0% { transform: scale(0); }
+    50% { transform: scale(1.2); }
+    100% { transform: scale(1); }
+}
+
+@keyframes winning {
+    0% { background: #ffeb3b; }
+    100% { background: #ffc107; }
+}
